site/mlops.af/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: mlops-af
  name: mlops-af-proxy
spec:
  selector:
    app: mlops-af
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
