site/mlops.af/k8s/nginx-proxy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlops-af
---
kind: Service
apiVersion: v1
metadata:
  namespace: mlops-af
  name: mlops-af-proxy
spec:
  selector:
    app: mlops-af
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: mlops-af
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: mlops-af-proxy
spec:
  tls:
  - hosts:
      - mlops.af
    secretName: echo-tls
  rules:
  - host: mlops.af
    http:
      paths:
      - path: /
        backend:
          serviceName: mlops-af-proxy
          servicePort: 80
